serie single and fix mobile

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,7 @@
 { 
     "title": "Hi, I’m Claudia",
-    "description": "I’m a 27-year-old Argentinian-Italian web designer and frontend developer living in Buenos Aires and looking forward to moving to Europe or USA. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve. \n Besides my passion for design and coding, I love and spend a lot of time travelling and taking photos. Feel free to visit my Unsplash page. \n My main focus nowadays is emotional design, web animation, and accessibility.",
-    "contact":"And don’t forget to stalk me on:",
+    "description": "I’m an Italian Illustrator, in love by brush bristels, books, travelling!",
+    "contact":"Don’t forget to stalk me on:",
     "ctalabel":"Contact me",
     "cta":"mailto:claudiaschioppa@gmail.com"
 }
